<?xml version="1.0"?>
<package format="2">
  <name>vibration_navigator_driver</name>
  <version>0.0.0</version>
  <description>The vibration_navigator_driver package</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
</package>
